--- a/wimassur-backend/.env.example
+++ b/wimassur-backend/.env.example
@@ -1,8 +1,20 @@
+# Server
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
+NODE_ENV=development
+
+# Secrets (à modifier pour la production)
+APP_KEYS=toBeModified1,toBeModified2,toBeModified3,toBeModified4
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+# Database
+DATABASE_CLIENT=sqlite
+DATABASE_FILENAME=.tmp/data.db
+
+# Public URL (important pour l'admin)
+URL=http://localhost:1337
+PUBLIC_URL=http://localhost:1337
