--- a/wimassur-backend/.gitignore
+++ b/wimassur-backend/.gitignore
@@ -122,6 +122,8 @@ coverage
 ############################
 
 .env
+.env.local
+.env.production
 license.txt
 exports
 .strapi
@@ -129,3 +131,8 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+
+############################
+# Railway
+############################
+.railway
