--- a/wimassur-backend/.env.example
+++ b/wimassur-backend/.env.example
@@ -1,20 +1,36 @@
-# Server
+# Railway Production Environment Variables
+# Copy this to Railway's Environment Variables section
+
+# Server Configuration
+NODE_ENV=production
 HOST=0.0.0.0
-PORT=1337
-NODE_ENV=development
+PORT=${{PORT}}
+PUBLIC_URL=https://${{RAILWAY_PUBLIC_DOMAIN}}
+URL=https://${{RAILWAY_PUBLIC_DOMAIN}}
 
-# Secrets (à modifier pour la production)
-APP_KEYS=toBeModified1,toBeModified2,toBeModified3,toBeModified4
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+# Security Keys (Generate unique values for each!)
+APP_KEYS=<generate-key-1>,<generate-key-2>,<generate-key-3>,<generate-key-4>
+ADMIN_JWT_SECRET=<generate-admin-jwt-secret>
+API_TOKEN_SALT=<generate-api-token-salt>
+TRANSFER_TOKEN_SALT=<generate-transfer-token-salt>
+JWT_SECRET=<generate-jwt-secret>
+ENCRYPTION_KEY=<generate-encryption-key>
 
-# Database
-DATABASE_CLIENT=sqlite
-DATABASE_FILENAME=.tmp/data.db
+# Database Configuration (PostgreSQL)
+DATABASE_CLIENT=postgres
+DATABASE_URL=${{DATABASE_URL}}
+DATABASE_HOST=${{PGHOST}}
+DATABASE_PORT=${{PGPORT}}
+DATABASE_NAME=${{PGDATABASE}}
+DATABASE_USERNAME=${{PGUSER}}
+DATABASE_PASSWORD=${{PGPASSWORD}}
+DATABASE_SSL=true
+DATABASE_SSL_REJECT_UNAUTHORIZED=false
 
-# Public URL (important pour l'admin)
-URL=http://localhost:1337
-PUBLIC_URL=http://localhost:1337
+# Optional: Performance
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=10
+DATABASE_CONNECTION_TIMEOUT=60000
+
+# To generate secure keys, use:
+# openssl rand -base64 32
