--- a/wimassur-backend/nixpacks.toml
+++ b/wimassur-backend/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20", "npm-10_x"]
 
 [phases.install]
-cmds = ["npm install --force"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
