--- a/wimassur-backend/package.json
+++ b/wimassur-backend/package.json
@@ -22,6 +22,7 @@
     "better-sqlite3": "12.4.1",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
+    "pg": "^8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
@@ -34,7 +35,7 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=20.0.0 <=24.x.x",
+    "node": ">=18.0.0",
     "npm": ">=6.0.0"
   },
   "strapi": {
