--- a/wimassur-backend/railway.toml
+++ b/wimassur-backend/railway.toml
@@ -1,13 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install --force && npm run build"
+buildCommand = "npm install && npm run build"
 
 [deploy]
 startCommand = "npm run start"
-healthcheckPath = "/"
+healthcheckPath = "/api/health"
 healthcheckTimeout = 300
-
-[variables]
-NODE_ENV = "production"
-HOST = "0.0.0.0"
-PORT = "1337"
